# mastermind

./: .gitignore  README.md  index.html  mastermind_model_pseudocode.md  package-lock.json  package.json  tailwind.config.ts
Ember/: Info.plist
Ember/Ember/: APIService.swift  ActiveAssessmentView.swift  AppEnvironment.swift  AudioCaptureService.swift  AudioTripwireManager.swift  CactusManager.swift  ConvexClient.swift  DashboardView.swift  EmberApp.swift  (+20 more)
Ember/Ember.xcodeproj/: project.pbxproj
backend/: .env.example  convex_bridge.py  database.py  db_models.py  evals.py  main.py  models.py  rag_service.py  requirements.txt
convex/: README.md  admin.ts  audioValidators.ts  benchmarks.ts  clinicalPipeline.ts  compare.ts  deviceEvents.ts  directives.ts  emberIncidents.ts  incidents.ts  iosIngest.ts  mastermindIncidents.ts  patients.ts  schema.ts  validation.ts
ember-web-frontend-backend/: .env.example  README.md  index.html  package.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
synthetic-telemetry-diffusion/: .gitignore  FEATURE_SCHEMA.md  INTEGRATION.md  PLAN.md  QUALITY_NOTES.md  README.md  TECH_STACK.txt  feature_schema.json  pyproject.toml  requirements.txt
synthetic-telemetry-diffusion/configs/: default.yaml
synthetic-telemetry-diffusion/samples/: synthetic_vectors.json
synthetic-telemetry-diffusion/scripts/: build_dataset.py  sample_diffusion.py  train_diffusion.py
synthetic-telemetry-diffusion/src/synthetic_telemetry/: __init__.py  diffusion.py  features.py  schema.py  trainer.py
voice-agents-hack/: README.md  index.js  package.json
(+99 files in other folders)
